--- a/js cntrl tsk.html
+++ b/js cntrl tsk.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    <script>
-    //     num=parseInt(prompt("enter a number"))
+    <!-- <script> -->
+    <!-- //     num=parseInt(prompt("enter a number"))
     //     console.log(num)
     //     if(num%2===0)
     // {
@@ -29,6 +29,7 @@
     {
         console.log(`${num} is odd`)
     }
-    </script>
+    </script> -->
+
 </body>
 </html>
