--- a/js events .html
+++ b/js events .html
@@ -40,13 +40,13 @@
      </script> -->
 
 
-     <a href="https://www.youtube.com/" id="mylink">click</a>
+     <!-- <a href="https://www.youtube.com/" id="mylink">click</a>
      <script>
         const link=document.getElementById("mylink");
         link.addEventListener('click',(event)=>{
             event.preventDefault();
         })
-     </script>
+     </script> -->
 
 
     
