--- a/js array.html
+++ b/js array.html
@@ -64,6 +64,13 @@ let num = [4,5,1,3,6 ,10,21];
       num.sort((a, b) => b - a); // Sort in descending order
       console.log(num);
 
+
+    //   to copy array 
+    let arr3=[1,2,3]
+    console.log(arr3)
+    newar=[...arr3]
+    console.log(newar)
+
 </script>
 </body>
 </html>
